Added in the "main news" to the blog post

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -248,7 +248,9 @@
 						Vi anser att avtalet återspeglar Amastens ambition att bidra till 
 						samhällsutvecklingen genom kvalitativ nyproduktion och värdeskapande förvaltning.
 						Med iSpect som resurs har Amasten möjlighet att identifiera brister, såsom vanligt 
-						förekommande fel, i syfte att förebygga dem.
+						förekommande fel, i syfte att förebygga dem.<a href="https://besiktningsman.se/blogg/?p=amasten-digitaliserar-besiktningen-med-ispect">
+							<p class="text-blue">Läs mer här</p>
+						</a>
 					</h3>
 				</div>
 			</span>
