Commented out "Efterbesiktning" info text. Instead, linked to "Efterbesiktning" landing page.

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -330,6 +330,10 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Slutbesiktning
 						</a>
+						<a href="../brf/Efterbesiktning/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Efterbesiktning
+						</a>
 						<div class="accordion">
 							<h3>Ny slutbesiktning</h3>
 							<div>
@@ -428,7 +432,7 @@
 									</li>
 								</ul>
 							</div>
-							<h3>Efterbesiktning</h3>
+							<!-- <h3>Efterbesiktning</h3>
 							<div>
 								<ul>
 									<li class="col-5-12">
@@ -490,7 +494,7 @@
 
 									</li>
 								</ul>
-							</div>
+							</div> -->
 							<h3>Särskild besiktning</h3>
 							<div>
 								<ul>
