--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -269,6 +269,9 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6763492702781767680" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6762018616796835840" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
