--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -334,6 +334,10 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Efterbesiktning
 						</a>
+						<a href="../brf/särskild_besiktning/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Särskild besiktning
+						</a>
 						<div class="accordion">
 							<h3>Ny slutbesiktning</h3>
 							<div>
@@ -495,7 +499,7 @@
 									</li>
 								</ul>
 							</div> -->
-							<h3>Särskild besiktning</h3>
+							<!-- <h3>Särskild besiktning</h3>
 							<div>
 								<ul>
 									<li class="col-5-12">
@@ -547,7 +551,7 @@
 
 									</li>
 								</ul>
-							</div>
+							</div> -->
 
 							<!-- <h3><a href="/garantibesiktning/"></a>Garantibesiktning - 2-årsbesiktning </h3>
 							<div>
