Changed from Ä to A

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -334,7 +334,7 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Efterbesiktning
 						</a>
-						<a href="../brf/särskild_besiktning/" class="common-Button text-blue" style="">
+						<a href="../brf/sarskild_besiktning/" class="common-Button text-blue" style="">
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Särskild besiktning
 						</a>
