--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -336,7 +336,7 @@
 						</a>
 						<a href="../brf/sarskild_besiktning/" class="common-Button text-blue" style="">
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
-							Särskild besiktning
+							Särskild Besiktning
 						</a>
 						<div class="accordion">
 							<h3>Ny slutbesiktning</h3>
