- fixed a broken link. - fixed a typo.

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                                     Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
                                 </p>
                                 <p class="common-BodyText">
-                                    Vi erbjuder också ett samlat ispect med besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
+                                    Vi erbjuder också besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
                                 </p>
                                 <p class="common-BodyText">
                                     Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
