Redirected a path from /ispect.index to ispect.se

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                                 <h3 class="common-BodyTitle">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
                                 <p class="common-BodyText">Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
                                 <div class="section-Links">
-                                    <a href="ispect/">
+                                    <a href="https://ispect.se/" target="_blank"> 
                                         <p class="blue common-Button">Digitaliserad entreprenadbesiktning</p>
                                     </a>
                                 </div>
