--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                             <li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
                             <li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
                             <li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
+                            <li><a href="/utbildning/" class="common-Button text-blue fromCenter margin-bottom-1">Besiktningsutbildarna</a></li>
                         </ul>
                         <a href="tel:0101654000" id="mobilePhoneNumber">
                             <p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 - 17:00
@@ -543,7 +544,7 @@
                             <li class="col-6-12 left cell-32">
                                 <h2 class="common-IntroText">Vår digitala besiktningsprocess</h2>
                                 <h3 class="common-BodyTitle">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
-                                <p class="common-BodyText">Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
+                                <p class="common-BodyText">Direkt felavhjälpning, lättillgänglig o ch säker dokumentation samt noll byggfel.</p>
                                 <div class="section-Links">
                                     <a href="https://ispect.se/" target="_blank"> 
                                         <p class="blue common-Button">Digitaliserad entreprenadbesiktning</p>
