Utbildning index typos fixed

--- a/utbildning/index.html
+++ b/utbildning/index.html
@@ -261,7 +261,7 @@ window.BOKAMERA = {
 					/></a>
 				</div>
 				<div class="right">
-					<span
+					<span>
 						class="button actionButton sidebarTrigger"
 						data-sidebar-id="position-top"
 						><svg>
@@ -344,8 +344,8 @@ window.BOKAMERA = {
 		<section
 			class="slide whiteSlide autoHeight"
 			style="background: #f6f9fc"
-			id="consultIntro"
-		>
+			id="consultIntro">
+			
 			<div class="content">
 				<div class="container">
 					<div class="container-lg">
