--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                         <ul>
                             <li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
                             <li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
-                            <li><a href="/konsultation/index.html" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
-                            <li><a href="/utbildning/index.html" class="common-Button text-blue fromCenter margin-bottom-1">Besiktningsutbildarna</a></li>
+                            <li><a href="konsultation/index.html" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
+                            <li><a href="utbildning/" class="common-Button text-blue fromCenter margin-bottom-1">Besiktningsutbildarna</a></li>
                         </ul>
                         <a href="tel:0101654000" id="mobilePhoneNumber">
                             <p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 - 17:00
