--- a/utbildning/index.html
+++ b/utbildning/index.html
@@ -431,7 +431,7 @@ window.BOKAMERA = {
 									Tid bokad!
 								</p>
 							</li>
-							<div class="announcement" style="margin-top: 5rem">
+							<!-- <div class="announcement" style="margin-top: 5rem">
 								<span class="new-pill">PS</span>
 								<span class="message left">
 									Ett samtal med en av våra besiktningsmän kostar 595 kr (inkl.
@@ -440,7 +440,7 @@ window.BOKAMERA = {
 									Du kan välja mellan ett videosamtal och ett vanligt
 									telefonsamtal.
 								</span>
-							</div>
+							</div> -->
 						</ul>
 					</div>
 				</div>
