- All href's including #brf / #entreprenad are now navigated to the landing pages. - "besiktningsutbildarna"-button is commented out.

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
                         <img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="main-Logo">
                         <p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
                         <ul>
-                            <li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
-                            <li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
-                            <li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
-                            <li><a href="utbildning/" class="common-Button text-blue fromCenter margin-bottom-1">Besiktningsutbildarna</a></li>
+                            <li><a href="tjanster/entreprenad/" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
+                            <li><a href="tjanster/brf/" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
+                            <li><a href="konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
+                            <!-- <li><a href="utbildning/" class="common-Button text-blue fromCenter margin-bottom-1">Besiktningsutbildarna</a></li> -->
                         </ul>
                         <a href="tel:0101654000" id="mobilePhoneNumber">
                             <p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 - 17:00
@@ -415,8 +415,8 @@
                 <div class="wrap">
                     <div class="fix-10-12" style="padding-top: 5%;">
                         <h2>Vad söker du?</h2>
-                        <p class="menu inlineBlock margin-right-2 underline"><a href="#entreprenad">Entreprenad</a></p>
-                        <p class="menu inlineBlock underline"><a href="#brf">BRF</a></p>
+                        <p class="menu inlineBlock margin-right-2 underline"><a href="tjanster/entreprenad/">Entreprenad</a></p>
+                        <p class="menu inlineBlock underline"><a href="tjanster/brf/">BRF</a></p>
                     </div>
                 </div>
             </div>
