--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -259,12 +259,14 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Besiktningstjänster för bostadsrättsföreningar</h1>
-						<p>
+						<h1 class="hero-title" style="padding-bottom: 4%;">Besiktningstjänster för bostadsrättsföreningar</h1>
+						<a href="#servicesList"><button type="button" name="button"
+							class="common-Button text-blue bold">Våra tjänster</button> </a>
+						<!-- <p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande <br> utbud av besiktningstjänster
 							vid nyproduktion,
 							<br>ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
-						</p>
+						</p> -->
 					</div>
 
 				</div>
@@ -309,7 +311,6 @@
 			</div>
 		</div>
 		<section class="slide whiteSlide autoHeight" id="servicesList">
-
 			<div class="container">
 				<div class="container-lg">
 					<div class="fix-10-12 left">
