--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -257,11 +257,13 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Besiktningstjänster för entreprenader</h1>
-						<p>
+						<h1 class="hero-title" style="padding-bottom: 4%;">Besiktningstjänster för entreprenader</h1>
+						<a href="#servicesList"><button type="button" name="button"
+							class="common-Button text-blue bold">Våra tjänster</button> </a>
+						<!-- <p>
 							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster
 							<br>för entreprenadbesiktning för nyproduktion och ROT samt KA.
-						</p>
+						</p> -->
 					</div>
 
 				</div>
