--- a/index.html
+++ b/index.html
@@ -208,7 +208,17 @@
             </div>
             <div class="right">
                 <ul class="menu crop small bold">
-                    <li><a href="#tjanster">Tjänster</a></li>
+                    <li>  
+                        <div class="dropdown">
+                            <p class="crop small" style="font-weight: 600">Tjänster</p>
+                            <div class="dropdown-content">
+                                <a href="tjanster/entreprenad/">Entreprenad</a>
+                                <a href="tjanster/brf/">Brf</a>
+                                <a href="konsultation/">Rådgivning</a>
+                                <!-- <a href="utbildning/">Utbildning</a> -->
+                            </div>
+                        </div>
+                    </li>
                     <li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
                     <li><a href="kontakt/" class="text-blue">Kontakta oss</a></li>
                 </ul>
@@ -225,13 +235,26 @@
     </nav>
     <!-- Sidebar -->
     <nav class="sidebar top white text-blueGrey" data-sidebar-id="position-top">
-        <div class="close"><svg>
-				<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-			</svg></div>
-        <div class="content">
 
+        <div class="close">
+            <svg>
+				<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+			</svg>
+        </div>
+
+        <div class="content">
             <ul class="mainMenu center margin-top-1">
-                <li><a href="#tjanster">Tjänster</a></li>
+                <li>  
+                    <div class="dropdown">
+                        <p class="crop small bold" style="font-size: 20px">Tjänster</p>
+                            <div class="dropdown-content">
+                                <a href="tjanster/entreprenad/">Entreprenad</a>
+                                <a href="tjanster/brf/">Brf</a>
+                                <a href="konsultation/">Rådgivning</a>
+                                <!-- <a href="utbildning/">Utbildning</a> -->
+                            </div>
+                    </div>
+                </li>
                 <br>
                 <br>
                 <li><a href="kontakt/">Kontakta oss</a></li>
@@ -251,8 +274,8 @@
                 <br>
                 <li><a href="tel:0101654000">Telefon: 010-165 40 00</a></li>
             </ul>
-
         </div>
+
     </nav>
     <!-- <div class='siteHeader-guidesContainer'>
         <div class='guides siteHeader__guides' aria-hidden='true'>
