--- a/index.html
+++ b/index.html
@@ -244,17 +244,14 @@
 
         <div class="content">
             <ul class="mainMenu center margin-top-1">
-                <li>  
-                    <div class="dropdown">
-                        <p class="crop small bold" style="font-size: 20px">Tjänster</p>
-                            <div class="dropdown-content">
-                                <a href="tjanster/entreprenad/">Entreprenad</a>
-                                <a href="tjanster/brf/">Brf</a>
-                                <a href="konsultation/">Rådgivning</a>
-                                <!-- <a href="utbildning/">Utbildning</a> -->
-                            </div>
-                    </div>
-                </li>
+                <li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+                <br>
+                <br>
+                <li><a href="tjanster/brf/">Brf</a></li>
+                <br>
+                <br>
+                <li><a href="konsultation/">Rådgivning</a></li>
+                <!-- <li><a href="utbildning/">Utbildning</a></li> -->
                 <br>
                 <br>
                 <li><a href="kontakt/">Kontakta oss</a></li>
