--- a/index.html
+++ b/index.html
@@ -724,8 +724,8 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
-    <script src="../js/custom.js" type="text/javascript" name="main-scripts"></script>
+    <script src="js/slides.min.js" type="text/javascript" name="main-scripts"></script>
+    <script src="js/custom.js" type="text/javascript" name="main-scripts"></script>
     <script>
         window.intercomSettings = {
             app_id: "ybt1le09"
