--- a/skanska/boka/bekraftelse/index.html
+++ b/skanska/boka/bekraftelse/index.html
@@ -182,7 +182,17 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../../../#tjanster">Tjänster</a></li>
+					<li>  
+                        <div class="dropdown">
+                            <p class="crop small" style="font-weight: 600">Tjänster</p>
+                            <div class="dropdown-content">
+                                <a href="tjanster/entreprenad/">Entreprenad</a>
+                                <a href="tjanster/brf/">Brf</a>
+                                <a href="konsultation/">Rådgivning</a>
+                                <!-- <a href="utbildning/">Utbildning</a> -->
+                            </div>
+                        </div>
+                    </li>
 					<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
 					<li><a href="../../../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
@@ -207,7 +217,14 @@
 
 			<ul class="mainMenu center margin-top-1">
 
-				<li><a href="../../../#tjanster">Tjänster</a></li>
+				<li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+                <br>
+                <br>
+                <li><a href="tjanster/brf/">Brf</a></li>
+                <br>
+                <br>
+                <li><a href="konsultation/">Rådgivning</a></li>
+                <!-- <li><a href="utbildning/">Utbildning</a></li> -->
 				<br>
 				<br>
 				<li><a href="../../../kontakt/">Kontakta oss</a></li>
