Added Magnus Janson back. Changed his title from Styrelseordförande to VD

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -470,6 +470,13 @@
 									</a>
 								</li>
 								<li class="col-3-12">
+									<h3 class="common-BodyTitle">Magnus Janson</h3>
+									<p class="common-BodyText">VD</p>
+									<a href="mailto:magnus.janson@besiktningsman.se">
+										<p class="common-Link">magnus.janson@besiktningsman.se</p>
+									</a>
+								</li>
+								<li class="col-3-12">
 									<h3 class="common-BodyTitle">Robert Lindbom</h3>
 									<p class="common-BodyText">Besiktningschef</p>
 									<a href="mailto:robert@besiktningsman.se">
