--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -302,7 +302,7 @@
                     Boka besiktning
                 </h3>
                 <div>
-                    <div class="form-bg-offset-skanska" style="padding: 2%;">
+                    <div class="form-bg-offset-skanska">
                         <!--[if lte IE 8]>
                         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
                         <![endif]-->
