Fixed broken URLs on all pages.

--- a/tjanster/brf/Efterbesiktning/bekraftelse/index.html
+++ b/tjanster/brf/Efterbesiktning/bekraftelse/index.html
@@ -103,9 +103,9 @@
                         <div class="dropdown">
                             <p class="crop small" style="font-weight: 600">Tjänster</p>
                             <div class="dropdown-content">
-                                <a href="tjanster/entreprenad/">Entreprenad</a>
-                                <a href="tjanster/brf/">Brf</a>
-                                <a href="konsultation/">Rådgivning</a>
+                                <a href="../../../entreprenad/">Entreprenad</a>
+                                <a href="../../">Brf</a>
+                                <a href="../../../../../konsultation/">Rådgivning</a>
                                 <!-- <a href="utbildning/">Utbildning</a> -->
                             </div>
                         </div>
@@ -127,13 +127,13 @@
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
 			<ul class="mainMenu center margin-top-1">
-				<li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+				<li><a href="../../../entreprenad/">Entreprenad</a></li>
                 <br>
                 <br>
-                <li><a href="tjanster/brf/">Brf</a></li>
+                <li><a href="../../">Brf</a></li>
                 <br>
                 <br>
-                <li><a href="konsultation/">Rådgivning</a></li>
+                <li><a href="../../../../../konsultation/">Rådgivning</a></li>
                 <!-- <li><a href="utbildning/">Utbildning</a></li> -->
 				<br>
 				<br>
