--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -211,12 +211,12 @@
 					<li>  
                         <div class="dropdown">
                             <p class="crop small" style="font-weight: 600">Tjänster</p>
-                            <div class="dropdown-content">
-                                <a href="tjanster/entreprenad/">Entreprenad</a>
-                                <a href="tjanster/brf/">Brf</a>
-                                <a href="konsultation/">Rådgivning</a>
-                                <!-- <a href="utbildning/">Utbildning</a> -->
-                            </div>
+							<div class="dropdown-content">
+								<a href="../">Entreprenad</a>
+								<a href="../../brf/">Brf</a>
+								<a href="../../../../konsultation/">Rådgivning</a>
+								<!-- <a href="utbildning/">Utbildning</a> -->
+							</div>
                         </div>
                     </li>
 					<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
@@ -243,13 +243,13 @@
 
 			<ul class="mainMenu center margin-top-1">
 
-				<li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+				<li><a href="../">Entreprenad</a></li>
                 <br>
                 <br>
-                <li><a href="tjanster/brf/">Brf</a></li>
+                <li><a href="../../brf/">Brf</a></li>
                 <br>
                 <br>
-                <li><a href="konsultation/">Rådgivning</a></li>
+                <li><a href="../../../../konsultation/">Rådgivning</a></li>
                 <!-- <li><a href="utbildning/">Utbildning</a></li> -->
 				<br>
 				<br>
@@ -284,9 +284,8 @@
 							<a href="../../entreprenad/">Entreprenad<i class="icono-arrow2-left"></i></a>
 							<span class="bread-crumbs-title xs-hide">Fortlöpande besiktning</span>
 						</div>
-						<h1 class="common-IntroText text-white">Fortlöpande besiktning säkerställer kvalitetskritiska
-							moment
-							<hr> i entreprenadens alla etapper.</h1>
+						<h1 class="common-IntroText text-white">Fortlöpande besiktning säkerställer <br> kvalitetskritiska
+							moment i entreprenadens alla etapper.</h1>
 						<p>
 							Vill du säkerställa att entreprenaden färdigställs enligt tidplanen och inom budget?
 							<br>
