--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -175,9 +175,9 @@
                         <div class="dropdown">
                             <p class="crop small" style="font-weight: 600">Tjänster</p>
                             <div class="dropdown-content">
-                                <a href="tjanster/entreprenad/">Entreprenad</a>
-                                <a href="tjanster/brf/">Brf</a>
-                                <a href="konsultation/">Rådgivning</a>
+                                <a href="../tjanster/entreprenad/">Entreprenad</a>
+                                <a href="../tjanster/brf/">Brf</a>
+                                <a href="../konsultation/">Rådgivning</a>
                                 <!-- <a href="utbildning/">Utbildning</a> -->
                             </div>
                         </div>
@@ -203,13 +203,13 @@
 
 			<ul class="mainMenu center margin-top-1">
 
-				<li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+				<li><a href="../tjanster/entreprenad/">Entreprenad</a></li>
                 <br>
                 <br>
-                <li><a href="tjanster/brf/">Brf</a></li>
+                <li><a href="../tjanster/brf/">Brf</a></li>
                 <br>
                 <br>
-                <li><a href="konsultation/">Rådgivning</a></li>
+                <li><a href="../konsultation/">Rådgivning</a></li>
                 <!-- <li><a href="utbildning/">Utbildning</a></li> -->
 				<br>
 				<br>
@@ -242,11 +242,11 @@
 	</div>
 	<nav class="productNav">
 		<div class="container-xl" style="clear: both">
-			<a class="home colorize" href="#" style="float: left">
+			<a class="home colorize" href="#" style="float: left; margin-right: 5%;">
 				<span class="common-BodyTitle";>Nyhetsrum</span>
 			</a>
-			<a class="home colorize" href="../blogg/index.html" style="margin-left: 30rem;">
-				<span class="common-BodyTitle";>Besiktningsbloggen</span>
+			<a class="home colorize" href="../blogg/index.html">
+				<span class="common-BodyTitle">Besiktningsbloggen</span>
 			</a>
 		</div>
 	</nav>
