--- a/tjanster/brf/slutbesiktning/bekraftelse/index.html
+++ b/tjanster/brf/slutbesiktning/bekraftelse/index.html
@@ -107,9 +107,9 @@
                         <div class="dropdown">
                             <p class="crop small" style="font-weight: 600">Tjänster</p>
                             <div class="dropdown-content">
-                                <a href="tjanster/entreprenad/">Entreprenad</a>
-                                <a href="tjanster/brf/">Brf</a>
-                                <a href="konsultation/">Rådgivning</a>
+                                <a href="../../../entreprenad/">Entreprenad</a>
+                                <a href="../../">Brf</a>
+                                <a href="../../../../../konsultation/">Rådgivning</a>
                                 <!-- <a href="utbildning/">Utbildning</a> -->
                             </div>
                         </div>
@@ -133,13 +133,13 @@
 
 			<ul class="mainMenu center margin-top-1">
 
-				<li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+				<li><a href="../../../entreprenad/">Entreprenad</a></li>
                 <br>
                 <br>
-                <li><a href="tjanster/brf/">Brf</a></li>
+                <li><a href="../../">Brf</a></li>
                 <br>
                 <br>
-                <li><a href="konsultation/">Rådgivning</a></li>
+                <li><a href="../../../../../konsultation/">Rådgivning</a></li>
                 <!-- <li><a href="utbildning/">Utbildning</a></li> -->
 				<br>
 				<br>
