--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -211,12 +211,12 @@ Då ska du boka din slutbesiktning hos oss. " />
 					<li>  
                         <div class="dropdown">
                             <p class="crop small" style="font-weight: 600">Tjänster</p>
-                            <div class="dropdown-content">
-                                <a href="tjanster/entreprenad/">Entreprenad</a>
-                                <a href="tjanster/brf/">Brf</a>
-                                <a href="konsultation/">Rådgivning</a>
-                                <!-- <a href="utbildning/">Utbildning</a> -->
-                            </div>
+							<div class="dropdown-content">
+								<a href="../">Entreprenad</a>
+								<a href="../../brf/">Brf</a>
+								<a href="../../../../konsultation/">Rådgivning</a>
+								<!-- <a href="utbildning/">Utbildning</a> -->
+							</div>
                         </div>
                     </li>
 					<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
@@ -243,13 +243,13 @@ Då ska du boka din slutbesiktning hos oss. " />
 
 			<ul class="mainMenu center margin-top-1">
 
-				<li><a href="tjanster/entreprenad/">Entreprenad</a></li>
+				<li><a href="../">Entreprenad</a></li>
                 <br>
                 <br>
-                <li><a href="tjanster/brf/">Brf</a></li>
+                <li><a href="../../brf/">Brf</a></li>
                 <br>
                 <br>
-                <li><a href="konsultation/">Rådgivning</a></li>
+                <li><a href="../../../../konsultation/">Rådgivning</a></li>
                 <!-- <li><a href="utbildning/">Utbildning</a></li> -->
 				<br>
 				<br>
