Changed from "gedigen bakgrund" to "gedigen erfarenhet"

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -213,7 +213,7 @@
 						</p>
 						<p class="common-BodyText">Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
 						<p class="common-BodyText">
-							Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete.
+							Vi har cirka 30 välutbildade medarbetare med gedigen erfarenhet från byggsektorn och besiktningsarbete.
 							Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande.
 							Vi erbjuder kompletta besiktningsgrupper för samtliga fack.
 						</p>
