--- a/tjanster/brf/Efterbesiktning/index.html
+++ b/tjanster/brf/Efterbesiktning/index.html
@@ -334,7 +334,7 @@
 						<div class="center">
 							<h2 class="common-IntroText">Varför göra en efterbesiktning med Besiktningsman.se?</h2>
 								<p class="common-BodyText">
-									När du beställer en efterbesiktning hos oss, då får du tillgång till välutbildade besiktningsmän med gedigen bakgrund och erfarenhet av de moment som du vill kontrollera.</p>
+									När du beställer en efterbesiktning hos oss, då får du tillgång till välutbildade besiktningsmän med gedigen erfarenhet och erfarenhet av de moment som du vill kontrollera.</p>
 							<p class="common-BodyText">Du får även tillgång till iSpect - Sveriges enda digitala besiktningsplattform. <br>
 								Via plattformen får du spårbarhet i dina projekt, med statistik baserat på din besiktningsdata.</p>
 								<p class="common-BodyText margin-bottom-5"><a href="https://www.ispect.se" target="_blank" style="font-weight:bold;">Läs mer om iSpect här!</a></p>
@@ -502,7 +502,7 @@
 					<p class="common-BodyText margin-bottom-5 center">
 						Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
 						<br>
-						Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
+						Våra välutbildade medarbetare har gedigen erfarenhet från byggsektorn och besiktningsarbete.
 						<br>
 						Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
 					</p>
