--- a/tjanster/brf/OVK_besiktning/index.html
+++ b/tjanster/brf/OVK_besiktning/index.html
@@ -467,7 +467,7 @@
 					<p class="common-BodyText margin-bottom-5 center">
 						Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
 						<br>
-						Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
+						Våra välutbildade medarbetare har gedigen erfarenhet från byggsektorn och besiktningsarbete.
 						<br>
 						Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
 					</p>
