--- a/tjanster/brf/forbesiktning/index.html
+++ b/tjanster/brf/forbesiktning/index.html
@@ -336,7 +336,7 @@
 						<div class="center">
 							<h2 class="common-IntroText">Varför göra en förbesiktning med Besiktningsman.se?</h2>
 								<p class="common-BodyText">
-									När du beställer en förbesiktning hos oss, då får du en välutbildad besiktningsman med gedigen bakgrund och erfarenhet av det moment du vill kontrollera.</p>
+									När du beställer en förbesiktning hos oss, då får du en välutbildad besiktningsman med gedigen erfarenhet och erfarenhet av det moment du vill kontrollera.</p>
 							<p class="common-BodyText">Du får även tillgång till iSpect - Sveriges enda digitala besiktningsplattform. <br>
 								Via plattformen får du spårbarhet i dina projekt, med statistik baserat på din besiktningsdata.</p>
 								<p class="common-BodyText margin-bottom-5"><a href="https://www.ispect.se" target="_blank" style="font-weight:bold;">Läs mer om iSpect här!</a></p>
@@ -504,7 +504,7 @@
 					<p class="common-BodyText margin-bottom-5 center">
 						Besiktningsman.se bildades 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
 						<br>
-						Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
+						Våra välutbildade medarbetare har gedigen erfarenhet från byggsektorn och besiktningsarbete.
 						<br>
 						Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
 					</p>
