Updated to the new "Bookmore"-integration (known as BokaMera)

--- a/utbildning/index.html
+++ b/utbildning/index.html
@@ -637,7 +637,7 @@ window.BOKAMERA = {
 			crossorigin="anonymous"
 		></script>
 		<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		<script src="https://apps.bokamera.se/embedded/v2/embed.js"></script>
+		<script src="https://embed.bookmore.com/v2/embed.js"></script>
 		<script
 			src="../js/slides.min.js"
 			type="text/javascript"
