--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -255,18 +255,18 @@
 		<div class="container-xl">
 			<span class="featured-article">
 				<div class="featured-article-image">
-					<img src="../assets/img/backgrounds/richard news.png" alt="Abstract shapes">
+					<a href="https://besiktningsman.se/blogg/?p=titania-tecknar-avtal-med-besiktningsman-se"><img src="../assets/img/backgrounds/small-Titania.gif" alt="Abstract shapes"></a>
 				</div>
 				<div class="featured-article-content">
 					<h2 class="featured-article-title">
-						Besiktningsman.se har nu skrivit ett ramavtal med Amasten.
+						Avtal signerat mellan Besiktningsman.se och Titania.
 					</h2>
 					<h3 class="common-BodyText featured-article-subtitle">
-						Vi anser att avtalet återspeglar Amastens ambition att bidra till 
-						samhällsutvecklingen genom kvalitativ nyproduktion och värdeskapande förvaltning.
-						Med iSpect som resurs har Amasten möjlighet att identifiera brister, såsom vanligt 
-						förekommande fel, i syfte att förebygga dem.<a href="https://besiktningsman.se/blogg/?p=amasten-digitaliserar-besiktningen-med-ispect">
-							<p class="text-blue">Läs mer här</p>
+						Avtalet omfattar en heltäckande besiktningsgrupp som samarbetar 
+						med projektet i plattformen iSpect. I iSpect får Titania spårbarhet i projektet. 
+						Med statistik bland annat på vanligaste byggfelen, genomsnittlig avhjälpningstid 
+						och missade egenkontroller. <a href="https://besiktningsman.se/blogg/?p=titania-tecknar-avtal-med-besiktningsman-se">
+						<p class="text-blue">Läs mer här</p>
 						</a>
 					</h3>
 				</div>
