--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -401,7 +401,7 @@
 							<div class="" style="margin-left: 80px;">
 								<h3 class="common-BodyTitle">Besiktning påbörjas</h3>
 								<p class="fix-4-12 toLeft common-BodyText">Besiktningsmannen kommer att undersöka hela
-									huset och avgöra om det framträtt några nya byggfel i fastigheten.</p>
+									huset och avgöra om det framträtt garantifel i fastigheten.</p>
 							</div>
 						</li>
 						<li class="col-4-12">
