Added a LinkedIn post

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -289,6 +289,9 @@
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6782955742396747776" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6782955742396747776" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6777913758548283392" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
