Updated industry regulations documents for GVK, MVK and Sakervatten

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -456,10 +456,10 @@ BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
 						</a>
 					</li>
 					<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
-						<a href="../assets/documents/Branschregler_2016_1_sakervatten.pdf" class="card" style="background: #E7F4F7;" target="_blank">
+						<a href="../assets/documents/Sakervatten2021.pdf" class="card" style="background: #E7F4F7;" target="_blank">
 							<div class="content" style="background: #E7F4F7;">
 								<div class="cover" style="background: #E7F4F7;">
-									<img src="../assets/documents/covers/sakervatten_cover.png" title="Byggkeramikrådets
+									<img src="../assets/documents/covers/Sakervatten2021.png" title="Byggkeramikrådets
 branschregler för våtrum" alt="Branschregler för kakel och klinker i våtrum.
 Reglerna är framtagna av Byggkeramikrådet med
 hänsyn till myndighetskraven i Boverkets byggregler.
@@ -470,14 +470,26 @@ BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
 						</a>
 					</li>
 					<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
-						<a href="../assets/documents/gvk_sakra_vatrum_2016_1.pdf" class="card" style="background: #fff;" target="_blank">
+						<a href="../assets/documents/GVK2021.pdf" class="card" style="background: #fff;" target="_blank">
 							<div class="content" style="background: #fff;">
 								<div class="cover" style="background: #fff;">
-									<img src="../assets/documents/covers/sakravatrum_cover.png" title="Byggkeramikrådets
+									<img src="../assets/documents/covers/GVK2021.png" title="Byggkeramikrådets
 branschregler för våtrum" alt="Branschregler för kakel och klinker i våtrum.
 Reglerna är framtagna av Byggkeramikrådet med
 hänsyn till myndighetskraven i Boverkets byggregler.
 BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
+									 height="280" width="300" rel="nofollow">
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 fromCenter done margin-bottom-2" style="width: 28%">
+						<a href="../assets/documents/MVK2021.pdf" class="card" style="background: #fff;" target="_blank">
+							<div class="content" style="background: #fff;">
+								<div class="cover" style="background: #fff;">
+									<img src="../assets/documents/covers/MKV2021.png" title="Branschregler för
+									måleribranschens våtrumskontroll" alt="Måleribranschens regler för våtrum innehåller krav på entreprenörer/måleriföretag
+									som utför måleriarbeten i våtrum och på leverantörer av målningssystem för våtrum."
 									 height="280" width="300" rel="nofollow">
 								</div>
 							</div>
