--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -525,7 +525,7 @@
 			<h3 class="">Nyhetsbrevet Byggintelligens</h3>
 			<ul class="flex margin-bottom-3">
 				<li class="col-4-12">
-					<a href="http://bit.ly/byggintelligens5_20182019" target="_blank" class="article">
+					<a href="https://besiktningsman.se/blogg/?p=ispect-en-digital-besiktningsplattform-som-bidrar-till-effektivare-byggprojekt" target="_blank" class="article">
 						<img src="../assets/img/nyheter/bm_xmas.jpg" alt="">
 						<p class="common-Link">Tack för 2018 – ett bra år!</p>
 					</a>
@@ -604,7 +604,7 @@
 								</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 										<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
-										<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
+										<a target="_blank" href="https://besiktningsman.se/blogg/?p=ispect-en-digital-besiktningsplattform-som-bidrar-till-effektivare-byggprojekt">
 											<p class="common-Link">iSpect - En plattform som bidrar till effektivare byggprojekt.</p> 
 										</a>
 										<a href="https://besiktningsman.se/blogg/?p=filfunktionen-i-ispect-bidrar-till-att-besiktningen-utf%C3%B6rs-mot-r%C3%A4tt-handlingar-publicerades-18-december-2020-redigera-artikeln-visa-statistik">
