--- a/tjanster/brf/OVK_besiktning/bekraftelse/index.html
+++ b/tjanster/brf/OVK_besiktning/bekraftelse/index.html
@@ -288,7 +288,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 								<li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
 									<h3 class="margin-bottom-1">Besiktningsbloggen</h3>
-									<a target="_blank" href="http://bit.ly/byggintelligens5_20182019">
+									<a target="_blank" href="https://besiktningsman.se/blogg/?p=ispect-en-digital-besiktningsplattform-som-bidrar-till-effektivare-byggprojekt">
 										<p class="common-Link">iSpect - En plattform som bidrar till effektivare byggprojekt.</p> 
 									</a>
 									<a href="https://besiktningsman.se/blogg/?p=filfunktionen-i-ispect-bidrar-till-att-besiktningen-utf%C3%B6rs-mot-r%C3%A4tt-handlingar-publicerades-18-december-2020-redigera-artikeln-visa-statistik">
