- added a link to the new page at the service page - added the correct HubSpot form (embedded)

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -683,6 +683,10 @@
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							Teknisk Underhållsplan
 						</a>
+						<a href="../brf/solcellsbesiktning/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Solcellsbesiktning
+						</a>
 						<a href="../brf/OVK_besiktning/" class="common-Button text-blue" style="">
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							OVK - Obligatorisk ventilationskontroll
