--- a/tjanster/brf/solcellsbesiktning/index.html
+++ b/tjanster/brf/solcellsbesiktning/index.html
@@ -455,8 +455,9 @@
 						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
 						<script>
 						hbspt.forms.create({
+							region: "na1",
 							portalId: "4367163",
-							formId: "870a1ce9-b529-4a99-a17d-733ad4ced3a2"
+							formId: "c2bd021b-5e55-4f0e-8a62-8526fe05bd87"
 						});
 						</script>
 					</div>
