New LinkedIn post

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -286,6 +286,9 @@
 			<!-- newsflow list / latest first -->
 			<div class="list">
 				<span>
+					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6797849030815711232" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
+				</span>
+				<span>
 					<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6797505422950445056" height="1000" width="100%" frameborder="0" allowfullscreen="" title="Inbäddat inlägg" target="_blank"></iframe>
 				</span>
 				<span>
@@ -438,7 +441,7 @@
 			</div>
 		</div>
 		<!-- PR widget -->
-		<div class="contact" id="" style="">
+		<div class="contact" id="">
 			<h2 class="common-BodyTitle">Presskontakt</h2>
 			<a href="mailto:max.rostov@Besiktningsman.se">
 				<p class="common-Link">max.rostov@besiktningsman.se</p>
