Added a link to our blog post about solar cells

--- a/tjanster/brf/solcellsbesiktning/index.html
+++ b/tjanster/brf/solcellsbesiktning/index.html
@@ -337,7 +337,7 @@
 									Besiktning av solceller är frivilligt, men kan vara bra att göra för att säkerställa att cellerna installerats korrekt och uppfyller alla säkerhetskrav.</p>
 							<p class="common-BodyText">Våra el-besiktningsmän har gedigen erfarenhet från installationsarbeten. De har god kännedom om diverse solcellsanläggningar och vet vilka fel som är vanligt förekommande för respektive anläggning.</p>
 							<p class="common-BodyText">Efter besiktningen dokumenteras allt i ert iSpect-konto. iSpect ingår alltid när ni besiktar via Besiktningsman.se, och förblir en samlingsplats för det som berör kvalitetsarbetet i ert projekt. </p>
-								<p class="common-BodyText margin-bottom-5"><a href="https://www.ispect.se" target="_blank" style="font-weight:bold;">Läs mer om iSpect här!</a></p>
+								<p class="common-BodyText margin-bottom-5"><a href="https://besiktningsman.se/blogg/?p=fyra-av-fem-solceller-%C3%A4r-felmonterade-g%C3%B6r-en-besiktning-och-f%C3%A5-dessa-%C3%A5tg%C3%A4rdade-kostnadsfritt" target="_blank"> <b>Bra att läsa: </b><u><I>Fyra av fem solceller är felmonterade. Här förklarar vi varför.</I></u></a></p>
 
 							<ul class="flex">
 								<li class="col-4-12">
