--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -976,10 +976,11 @@
 						<![endif]-->
 						<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
 						<script>
-							hbspt.forms.create({
-								portalId: "4367163",
-								formId: "ef258438-93c8-4ccf-ad12-711f27aa050d"
-							});
+						hbspt.forms.create({
+							region: "na1",
+							portalId: "4367163",
+							formId: "990084da-3fc8-4b06-9d52-03cc173b7f7a"
+						});
 						</script>
 					</div>
 					<footer></footer>
