Added a button for b2c orders. (Takes the user to app.ispect.se/b2c-status-order-form)

--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -327,7 +327,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- GB why bm -->
+	<!-- Statusbesiktning why bm -->
 	<section class="slide whiteSlide autoHeight">
 		<div class="container">
 			<div class="container-lg">
@@ -413,7 +413,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- GB how to -->
+	<!-- Status how to -->
 	<section class="slide whiteSlide autoHeight margin-top-1" id="steg">
 		<div class="content">
 			<div class="container-lg">
@@ -479,13 +479,19 @@
 			</div>
 		</div>
 	</section>
-	<!-- GB booking -->
+	<!-- Statusbesiktning booking -->
 	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka"
 		style="background: #f6f9fc;">
-		<div class="container-lg">
+		<div class="fix-10-12">
+			<div class="center-m-down" style="color: black;">
+				<h3>Är du privatperson?</h3>
+				<a class="common-Button blue text-white" target="_blank" href="https://app.ispect.se/b2c-status-order-form">Boka direkt här!</a>
+			</div>
+		</div>
+		<div class="container-lg" style=" margin-top: 16px;">
 			<div class="pad formBackground form-column">
 				<h3 class="pad-header margin-0 common-BodyTitle2 center">
-					Intresserad? Kontakta oss för att komma igång.
+					Representerar du en brf/företag?
 					<p class="common-BodyText margin-0 padding-0">
 						Lämna ett meddelande så
 						hör vi av oss.
