--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -285,8 +285,7 @@
 							Beställ en statusbesiktning för att få en bedömning på det byggnadstekniska <br>
 							skicket av BRF:ens fastighet eller installation/er.
 						</p>
-						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">Begär
-								offert</button> </a>
+						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">Boka nu</button> </a>
 					</div>
 
 				</div>
