--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -285,7 +285,7 @@
 							Beställ en statusbesiktning för att få en bedömning på det byggnadstekniska <br>
 							skicket av BRF:ens fastighet eller installation/er.
 						</p>
-						<a href="#boka"><button type="button" name="button" class="common-Button text-blue bold">Boka nu</button> </a>
+						<a href="#bokab2c"><button type="button" name="button" class="common-Button text-blue bold">Boka nu</button> </a>
 					</div>
 
 				</div>
@@ -474,6 +474,7 @@
 							</div>
 						</li>
 					</ul>
+					<div id="bokab2c"></div>
 				</div>
 			</div>
 		</div>
